fix service-items flex-box alignment

--- a/assets/css/_service.css
+++ b/assets/css/_service.css
@@ -122,7 +122,7 @@
     width: 90%;
     flex-wrap: wrap;
     gap: 15px;
-    margin-left: 2.5%;
+    margin-left: 5%;
     margin-bottom: 50px;
   }
   .service-item {
@@ -130,13 +130,17 @@
   }
 }
 @media screen and (max-width: 780px) {
+  .service-items {
+    justify-content: flex-start;
+  }
   .service-item  {
-    width: 45%;
+    width: 48%;
   }
 }
 @media screen and (max-width: 590px) {
   .service-items {
     margin-bottom: 50px;
+    justify-content: center;
   }
 .service-item {
   width: 90%;
